[package]
name = "cir"
version = "0.1.3"
authors = ["Sean Young <sean@mess.org>"]
repository = "https://github.com/seanyoung/cir"
edition = "2021"
description = "Linux Infrared Tooling"
license = "MIT"
rust-version = "1.74.0"
exclude = [ "/.git*", "/testdata", "/tests", "/TODO" ]

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
toml = "0.8"
itertools = "0.12"
evdev = "0.12.1"
mio = { version = "0.8", features = [ "os-poll", "os-ext" ] }
nix = { version = "0.28", features = [ "fs", "ioctl" ] }
humantime = "2.1"
bitflags = "2.5"
num-integer = "0.1"
terminal_size = "0.3"
log = "0.4"
peg = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { git = "https://github.com/aya-rs/aya.git" }
irp = { version = "0.3.3", path = "irp", features = [ "bpf" ] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
irp = { version = "0.3.3", path = "irp" }

[dev-dependencies]
assert_cmd = "2.0"
serde_json = "1.0"
liblircd = { path = "tests/liblircd" }
libirctl = { path = "tests/libirctl" }
rand = "0.8"

[workspace]
members = [
	"irp",
	"tests/liblircd",
	"tests/libirctl",
	"irp/tests/rust-irptransmogrifier",
]

[features]
default = []
loopback-tests = []

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
