[workspace]
members = [
	"irp",
	"cir",
	"transmogrifier_compare",
	"lirc_compare",
	"libkcodec"
]
default-members = [
	"irp",
	"cir",
]
resolver = "2"

[workspace.dependencies]
libirctl = { path = "libirctl" }
liblircd = { path = "liblircd" }
libkcodec = { path = "libkcodec" }
irptransmogrifier = { path = "rust-irptransmogrifier" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
