[package]
name = "cir"
version = "0.1.3"
authors = ["Sean Young <sean@mess.org>"]
repository = "https://github.com/seanyoung/cir"
edition = "2021"
description = "Linux Infrared Tooling"
license = "MIT"
rust-version = "1.74.0"
exclude = [ "/tests" ]

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
toml = "0.8"
itertools = "0.12"
bitflags = "2.5"
num-integer = "0.1"
terminal_size = "0.3"
log = "0.4"
peg = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { git = "https://github.com/emberian/evdev" }
nix = { version = "0.28", features = [ "fs", "ioctl", "poll" ] }
aya = { git = "https://github.com/aya-rs/aya.git" }
irp = { version = "0.3.3", path = "../irp", features = [ "bpf" ] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
irp = { version = "0.3.3", path = "../irp" }

[dev-dependencies]
assert_cmd = "2.0"
serde_json = "1.0"
liblircd = { workspace = true }
libirctl = { workspace = true }
rand = "0.8"
pretty_assertions = "1.4"
