[package]
name = "irp"
version = "0.3.2"
authors = ["Sean Young <sean@mess.org>"]
repository = "https://github.com/seanyoung/cir"
edition = "2021"
description = "Infrared IRP encoder and decoder"
documentation = "https://docs.rs/irp/"
keywords = [ "BPF", "IR", "infrared", "pronto" ]
readme = "README.md"
license = "MIT"
rust-version = "1.74.0"
exclude = [ "/doc", "/tests" ]

[dependencies]
num = "0.4"
regex = "1"
serde_derive = { version = "1.0" }
serde = { version = "1.0", features = [ "derive" ] }
xml-rs = "0.8"
bitvec = "1.0"
log = "0.4"
peg = "0.8"
itertools = "0.12"
num-rational = "0.4"
inkwell = { version = "0.4", features = [ "target-bpf", "llvm17-0-force-dynamic" ], optional = true }
once_cell = { version = "1.19", optional = true }

[features]
bpf = [ "inkwell", "once_cell" ]

[dev-dependencies]
cir = { path = ".." }
rand = "0.8"
irptransmogrifier = { path = "tests/rust-irptransmogrifier" }
aya-obj = "0.1"
rbpf = "0.2"
