[package]
name = "linux-infrared"
version = "0.1.0"
authors = ["Sean Young <sean@mess.org>"]
edition = "2018"

[dependencies]
irp = { path = "../irp" }
clap = "3.0"
toml = "0.5"
serde_derive = { version = "1.0" }
serde = { version = "1.0", features = [ "derive" ] }
iocuddle = "0.1.1"
itertools = "0.10"
evdev = "0.11.1"
mio = { version = "0.8", features = [ "os-poll", "os-ext" ] }
libc = "0.2"
nix = "0.23"
regex = "1"
unicode-xid = "0.2"
humantime = "2.1"
aya = "0.10"

[build-dependencies]
lrpeg = "0.4.1"
